[package]
name = "logging-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-cors = "0.5.4"
env_logger = "0.9.0"
log = "0"
serde = { version = "1", features = ["derive"] }
actix-web-validator = "2.2"
validator = { version = "0.12", features = ["derive"] }
diesel = { version = "1.4.8", features = ["r2d2", "postgres"] }
serde_json = "1.0"
